--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "expo-status-bar": "~1.1.0",
     "formik": "^2.2.9",
     "fuzzysort": "^1.1.4",
+    "lottie-react-native": "^4.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-web": "0.17.1",
     "yup": "^0.32.11"
   },
