--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-status-bar": "~1.1.0",
     "formik": "^2.2.9",
     "fuzzysort": "^1.1.4",
+    "lodash": "^4.17.21",
     "lottie-react-native": "^4.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
